lo que pasó, pasó

--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -1,35 +1,35 @@
 \chapter{Evolución Hacia El Equilibrio}
 
-En el capítulo anterior se expuso la idea de Popescu et al. \cite{Popescu2006} para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)?. Este capítulo mostrará lo que Linden et al. \cite{LindenPaper} proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al. permite una flexibilidad al momento de manejar nuevos problemas por eso se ve que además de tener una buena base filosófica las matemáticas dan un buen esqueleto para sostener las bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema; esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde esta perspectiva.
+En el capítulo anterior se expuso la idea de Popescu et al \cite{Popescu2006} para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)? Este capítulo mostrará lo que Linden et al. \cite{LindenPaper} proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al permite una flexibilidad al momento de manejar nuevos problemas. Por eso se ve que además de tener una buena base filosófica, las matemáticas dan un buen esqueleto para sostener estas bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema, esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde esta perspectiva.
 
 \section{Especificación del Equilibrio}
 
-Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá establecer lo que significa, basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
+Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá establecer lo que significa. Basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
 \\
-La manera más intuitiva que se tiene sobre el equilibrio es que el sistema, que se está analizando, se mantiene en el mismo estado durante un largo periodo de tiempo con las mismas características; entonces se dice que un sistema se equilibra si este evoluciona a un estado específico (puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Aún no se dice nada  sobre las dependencias que pueda tener, o sea se puede tener una condición de dependencia laxa esto permite decir que el estado de equilibrio depende o no del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Dado esto no es importante cuál sea el estado de equilibrio este puede ser la distribución de Boltzmann o cualquier otra. El concepto de equilibrio dicho aquí es una forma general de hablar sobre este fenómeno porque se da mucha libertad al estado y sus dependencias sobre el ambiente por eso se seguirá puliendo para no dejarlo tan general.
+La manera más intuitiva que se tiene sobre el equilibrio es que el sistema, que se está analizando, se mantiene en el mismo estado durante un largo periodo de tiempo con las mismas características; entonces se dice que un sistema se equilibra si este evoluciona a un estado específico (puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Aún no se dice nada  sobre las dependencias que pueda tener, o sea se puede tener una condición de dependencia laxa esto permite decir que el estado de equilibrio depende o no del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Dado esto, no es importante cuál sea el estado de equilibrio este puede ser la distribución de Boltzmann o cualquier otra. El concepto de equilibrio dicho aquí es una forma general de hablar sobre este fenómeno porque se da mucha libertad al estado y sus dependencias sobre el ambiente, por eso se seguirá puliendo para no dejarlo tan general.
 \\
-El  estado de equilibrio del sistema no debería depender exactamente del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que al cuando se llega al equilibrio el estado dependa de la de estos parámetros, ya se restringe un poco más a lo que se llamará equilibrio.Esta idea también es proveniente de lo que normalmente se espera del equilibrio porque los parámetros macroscópicos son los que en general se tienen completamente especificados y estos establecen el equilibrio. El estado exacto del baño no debería jugar un papel  tan importante porque para los mismos parámetros macroscópicos pueden haber varios estados del baño que concuerden con ellos, se supone que con ciertos parámetros macroscópicos dados  un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados con los mismos parámetros macroscópicos haber sido iniciados en un estado A y el otro en el estado B llegarán al mismo estado de equilibrio sin importar en cual de los dos hayan empezado.  Esto motiva lo siguiente:
+El  estado de equilibrio del sistema no debería depender exactamente del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que al cuando se llega al equilibrio el estado dependa de la de estos parámetros, ya se restringe un poco más a lo que se llamará equilibrio. Esta idea también es proveniente de lo que normalmente se espera del equilibrio porque los parámetros macroscópicos son los que en general se tienen completamente especificados y estos establecen el equilibrio. El estado exacto del baño no debería jugar un papel  tan importante porque para los mismos parámetros macroscópicos pueden haber varios estados del baño que concuerden con ellos. Se supone que con ciertos parámetros macroscópicos dados  un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados con los mismos parámetros macroscópicos haber sido iniciados en un estado A y el otro en el estado B llegarán al mismo estado de equilibrio sin importar en cual de los dos hayan empezado.  Esto motiva lo siguiente:
 Si el subsistema es pequeño en comparación con el ambiente el estado de equilibrio del subsistema debería ser independiente de su estado inicial. Pero para poder corroborar y unir estas ideas con los resultados conocidos se impone una última restricción. Bajo condiciones del estado inicial y el Hamiltoniano, el estado de equilibrio del subsistema puede ser escrito como $\rho_{S}= \frac{1}{Z} \exp(-\frac{H_{S}}{k_{B}T})$ la forma familiar dada por la mecánica estadística.
 \\
 Haber podido dividir el problema de la termalización de esta forma permite analizar cada uno de los aspectos por separado además de darle una generalidad a todo el tratamiento sin tener que restringirse a situaciones que usualmente se le asocian a la termalización. Por ejemplo no se debe quedar en el régimen de corta o débil interacción entre el sistema y el baño o decir que el baño es uno típico (Dado una temperatura o rango de energía). Pueden tomarse situaciones en los que el sistema no llegue a equilibrio. 
 \\
-Lo siguiente es que se mostrará con suposiciones no muy fuertes los primeros dos supuestos, la idea de que un sistema llegará al equilibrio y que el estado no depende del ambiente, son propiedades de sistemas cuánticos.La evolución del sistema tiene implicado al Hamiltoniano por eso se estudiará el siguiente:
+Lo siguiente, es que se mostrará con suposiciones no muy fuertes los primeros dos supuestos. La idea de que un sistema llegará al equilibrio y que el estado no depende del ambiente, son propiedades de sistemas cuánticos.La evolución del sistema tiene implicado al Hamiltoniano por eso se estudiará el siguiente:
 \begin{equation}
 H= \sum_{k} E_{k} \ket{E_{k}} \bra{E_{k}},
 \end{equation}
-donde $\ket{E_{k}}$ es el estado propio con energía $E_{k}$. Al Hamiltoniano anterior se le dará la única restricción de que tenga brechas de energías no degeneradas. Esto quiere decir que para una diferencia de energías dada, solo existe un par posible de estados con esa diferencia. El ejemplo puesto por (Linden et al.) es: si se tiene 4 valores propios de energía $E_{k}, E_{l},E_{m},E_{n}$ entonces $E_{k}-E_{l}=E_{m}-E_{n} $ implica $k=l$ y $m=n$, o $k=m$ y $l=n$. Esto implica que los niveles de energía no son iguales para diferentes estados (no son degenerados).\\
-Esta restricción del Hamiltoniano comprende que no importa como se divida el subsistema y el baño  siempre van a estar interactuando, esto excluye los Hamiltonianos no interactuantes ($H=H_{S}+H_{E}$) estos Hamiltonianos tienen muchas brechas de energía degeneradas. Véase que si no hay interacción en el Hamiltoniano la energía es $E=E_{S}+E_{B}$ y sean $E_{1},E_{2},E_{3},E_{4}$ tales que se satisfaga $E_{i}=E_{i}^{S}+E_{i}^{E}$ $i=1,2,3,4$, esto lleva a una brecha degenerada. Este supuesto no es tan fuerte como pueda llegar a parecer porque cualquier perturbación que se le haga al Hamiltoniano romperá las degeneraciones sin importar lo pequeña que sea la perturbación. Aunque estos cambios se tarden en hacer efecto sobre la evolución del sistema las escalas temporales no son importantes en este momento.  Gracias a esta restricción se pueden incluir interacciones complejas que por lo general no son analizadas en la literatura como interacciones de larga distancia o interacciones entre todas las partículas esto hace que la energía no llegue a ser una cantidad extensiva.
+donde $\ket{E_{k}}$ es el estado propio con energía $E_{k}$. Al Hamiltoniano anterior se le dará la única restricción de que tenga brechas de energías no degeneradas. Esto quiere decir que para una diferencia de energías dada, solo existe un par posible de estados con esa diferencia. El ejemplo puesto por Linden et al \cite{LindenPaper} es: si se tiene 4 valores propios de energía $E_{k}, E_{l},E_{m},E_{n}$ entonces $E_{k}-E_{l}=E_{m}-E_{n} $ implica $k=l$ y $m=n$, o $k=m$ y $l=n$. Esto implica que los niveles de energía no son iguales para diferentes estados (no son degenerados).\\
+Esta restricción del Hamiltoniano comprende que no importa como se divida el subsistema y el baño  siempre van a estar interactuando. Esto excluye los Hamiltonianos no interactuantes ($H=H_{S}+H_{E}$) estos Hamiltonianos tienen muchas brechas de energía degeneradas. Véase que si no hay interacción en el Hamiltoniano la energía es $E=E_{S}+E_{B}$ y sean $E_{1},E_{2},E_{3},E_{4}$ tales que se satisfaga $E_{i}=E_{i}^{S}+E_{i}^{E}$ $i=1,2,3,4$, esto lleva a una brecha degenerada. Este supuesto no es tan fuerte como pueda llegar a parecer porque cualquier perturbación que se le haga al Hamiltoniano romperá las degeneraciones sin importar lo pequeña que sea la perturbación. Aunque estos cambios se tarden en hacer efecto sobre la evolución del sistema las escalas temporales no son importantes en este momento.  Gracias a esta restricción se pueden incluir interacciones complejas que por lo general no son analizadas en la literatura como interacciones de larga distancia o interacciones entre todas las partículas esto hace que la energía no llegue a ser una cantidad extensiva.
 
 \section{Equilibración}
 
-La perspectiva principal que se quiere dar a entender siguiendo a \cite{LindenPaper} viene en forma del siguiente resultado: Para cada estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios y el cual evoluciona bajo un Hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada pequeño subsistema llegará al equilibrio. Esto quiere decir que todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio exactamente que el sistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
+La perspectiva principal que se quiere dar a entender siguiendo a  los autores \cite{LindenPaper} viene en forma del siguiente resultado: Para cada estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios y el cual evoluciona bajo un Hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada pequeño subsistema llegará al equilibrio. Esto quiere decir que todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio exactamente que el sistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
 \\
-Hay en este resultado un requerimiento que anteriormente no fue nombrado, el requerimiento de una cantidad grande de estados propios de energía. La necesidad de que el sistema tenga muchos estados propios de energía es equivalente a decir que el estado variará bastante durante su evolución temporal, por ejemplo el caso trivial de un solo estado propio de energía es claro que este no cambiará para nada. Este caso tan particular no llega a ser de mucho interés porque este estado no evolucionará a otro y se diría que ya se encuentra en equilibrio. Los resultados que se quieren mostrar tomaran estados fuera del equilibrio. En este punto se usan las otras suposiciones hechas anteriormente para que el subsistema no dependa del estado inicial el subsistema debe perder esta información; si el subsistema empieza lejano al equilibrio este pasará  por muchos estados en su camino al equilibrio lo cual implica que el universo también evolucione en muchos estados. El hecho de que el subsistema haya llegado al equilibrio no significa que el universo deje de evolucionar, debido a la unitaridad, debe seguir evolucionando con la misma proporción que antes. Para que los estados en los que el subsistema se encuentre en no equilibrio ocurran poco, los estados del universo en los que el subsistema se encuentre en esas condiciones deben ser una fracción muy pequeña del total de estados por donde pasa el universo. Por esto el universo debe pasar por muchos estados y el requerimiento de que tenga muchos estados propios de energía se valida. 
+Hay en este resultado un requerimiento que anteriormente no fue nombrado, el requerimiento de una cantidad grande de estados propios de energía. La necesidad de que el sistema tenga muchos estados propios de energía es equivalente a decir que el estado variará bastante durante su evolución temporal. por ejemplo, el caso trivial de un solo estado propio de energía es claro que este no cambiará para nada. Este caso tan particular no llega a ser de mucho interés porque este estado no evolucionará a otro y se diría que ya se encuentra en equilibrio. Los resultados que se quieren mostrar tomaran estados fuera del equilibrio. En este punto se usan las otras suposiciones hechas anteriormente. Para que el subsistema no dependa del estado inicial el subsistema debe perder esta información; si el subsistema empieza lejano al equilibrio este pasará  por muchos estados en su camino al equilibrio lo cual implica que el universo también evolucione en muchos estados. El hecho de que el subsistema haya llegado al equilibrio no significa que el universo deje de evolucionar, debido a la unitaridad, debe seguir evolucionando con la misma proporción que antes. Para que los estados en los que el subsistema se encuentre en no equilibrio ocurran poco, los estados del universo en los que el subsistema se encuentre en esas condiciones deben ser una fracción muy pequeña del total de estados por donde pasa el universo. Por esto el universo debe pasar por muchos estados y el requerimiento de que tenga muchos estados propios de energía se válida. 
 \\
-Otra forma de saber qué pasa con el universo es observar qué ocurre con el ambiente. Por unitaridad el universo debe seguir evolucionando aunque el subsistema y se encuentre en equilibrio y no cambie. Esta Evolución puede darse por el cambio de correlaciones entre el subsistema y el baño o por cambios en el estado del baño. Lo que se muestra es: cuando el estado del baño pasa por muchos estados diferentes, cualquier subsistema alcanza el equilibrio. También se muestra que cuando el estado del universo pasa por muchos estados diferentes cualquier estado pequeño subsistema alcanza el equilibrio. Estas dos ideas  exponen que la equilibración ocurre en estados productos iniciales entre el subsistema y el baño, para casi todos los estados iniciales del baño.
+Otra forma de saber qué pasa con el universo es observar qué ocurre con el ambiente. Por unitaridad, el universo debe seguir evolucionando aunque el subsistema y se encuentre en equilibrio y no cambie. Esta Evolución puede darse por el cambio de correlaciones entre el subsistema y el baño o por cambios en el estado del baño \cite{Decoherence}. Lo que se muestra es: cuando el estado del baño pasa por muchos estados diferentes, cualquier subsistema alcanza el equilibrio. También se muestra que cuando el estado del universo pasa por muchos estados diferentes cualquier estado pequeño subsistema alcanza el equilibrio. Estas dos ideas  exponen que la equilibración ocurre en estados productos iniciales entre el subsistema y el baño, para casi todos los estados iniciales del baño.
 \\
 
-Para poder empezar a construir estos conceptos matemáticamente se puede empezar con la concepción matemática de evolucionar por muchos estados diferentes, esta se comprime en la dimensión efectiva del estado promediado temporalmente $d^{eff}(\omega)$ donde $\omega= \big \langle \rho(t) \big\rangle_{t}$. Esta medida de evolución por muchos estados se puede relacionar con los estados propios de energía así:
+Para poder empezar a construir estos conceptos matemáticamente, se puede empezar con la concepción matemática de evolucionar por muchos estados diferentes. Esta se comprime en la dimensión efectiva del estado promediado temporalmente $d^{eff}(\omega)$ donde $\omega= \big \langle \rho(t) \big\rangle_{t}$. Esta medida de evolución por muchos estados se puede relacionar con los estados propios de energía así:
 \\
 Se toma el estado del universo
 \begin{equation}
@@ -59,7 +59,7 @@ Considere cualquier estado $\ket{\psi(t)} \in \mathcal{H}$ evolucionando bajo un
 \end{equation}
 \end{theorem}
 
-\textbf{Demostración}:
+\begin{proof}
 Recordando la relación entre la distancia de traza y la norma de Hilbert-Schmidt que se usó en el capítulo anterior
 
 \begin{equation}
@@ -120,12 +120,12 @@ Uniendo todos los resultados con la desigualdad inicial del promedio de la dista
 \begin{equation}
 \langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t} \le  \frac{1}{2} \sqrt{d_{S} \Tr_{B}(\omega_{B}^{2})} \le \frac{1}{2}\sqrt{d_{S}^{2} 	\Tr(\omega^{2})}=\frac{1}{2}\sqrt{\frac{d_{S}^{2}}{d^{eff}(\omega)}}.
 \end{equation}
-
-Este resultado  da base para hablar de la termalización de una forma matemática, se ve que el subsistema se equilibra cuando la dimensión de $d^{eff}(\omega)$ sea mucho mayor que la dimensión de dos copias del subsistema ($d_{S}^{2}$) o cuando la dimensión efectiva explorada por el baño $d^{eff}(\omega_{B})$ sea mucho más grande que la dimensión del subsistema.
+\end{proof}
+Este resultado  da base para hablar de la termalización de una forma matemática, se ve que el subsistema se equilibra cuando la dimensión de $d^{eff}(\omega)$ sea mucho mayor que la dimensión de dos copias del subsistema $d_{S}^{2}$ o cuando la dimensión efectiva explorada por el baño $d^{eff}(\omega_{B})$ sea mucho más grande que la dimensión del subsistema.
 \\
-EL resultado anterior tiene varias generalidades que se quieren recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos \cite{SakuraiQuantum}. Además de que esta ha sido la única restricción sobre todo el universo, no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación con respecto a la termodinámica usual a ningún objeto tratado hasta ahora. no se ha hablado tampoco de ninguna forma en la que el subsistema llega al equilibrio ni que esta en algún estado específico.
+El resultado anterior tiene varias generalidades que se quieren recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos \cite{SakuraiQuantum}. Aunque esta ha sido la única restricción sobre todo el universo no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación con respecto a la termodinámica usual a ningún objeto tratado hasta ahora. No se ha hablado tampoco de la forma específica en la que el subsistema llega al equilibrio ni que está en algún estado específico.
 \\
-Los valores propios de energía tampoco son importantes en las cotas dadas anteriormente, en el teorema al ser demostrado fue encontrado algunos valores propios de energía que al ser promediados dan 0. La energía es importante al buscar las formas exactas en las que evoluciona el sistema pero aquí se demostró que para la equilibración en intervalos de tiempo muy grandes no son muy importantes, las cotas son independientes del tiempo. La forma en que se dividió el universo (subsistema y baño) no es importante, solo es importante para el teorema \ref{equlibracion} la dimensión del subsistema y no la especificación de la forma o un subsistema particular. Esto permite decir que cualquier subsistema con dimensión $d_{S}$ estará en equilibrio, los varios subsistemas bastante pequeños de dimensión $d_{S}$ también estarán en equilibrio.
+Los valores propios de energía tampoco son importantes en las cotas dadas anteriormente, en el teorema al ser demostrado fue encontrado algunos valores propios de energía que al ser promediados dan 0. La energía es importante al buscar las formas exactas en las que evoluciona el sistema pero aquí se demostró que para la equilibración en intervalos de tiempo muy grandes no son muy importantes, las cotas son independientes del tiempo. La forma en que se dividió el universo (subsistema y baño) no es importante, solo es importante para el teorema \ref{equlibracion} la dimensión del subsistema y no la especificación de la forma o un subsistema particular. Esto permite decir que cualquier subsistema con dimensión $d_{S}$ estará en equilibrio. Los varios subsistemas bastante pequeños de dimensión $d_{S}$ también estarán en equilibrio.
 \\
 El teorema \ref{equlibracion} puso una cota a la fluctuación de $\rho_{S}(t)$ alrededor de $\omega_{S}$ esto ya es un inicio pero aunque esta cota exista no se ha hablado de cuales sistemas tendrán fluctuaciones suficientemente pequeñas para poder decir que se encuentra en equilibrio. Ahora se explorará cuáles son los estados que se equilibrarán, el siguiente teorema dirá cuales estados tienen fluctuaciones muy pequeñas.
 
@@ -145,8 +145,7 @@ con constante $c= \frac{(\ln 2)^{2}}{72 \pi^{3}} \approx 10^{-4}$.
 \end{enumerate}
 \end{theorem}
 
-\textbf{Demostración}
-
+\begin{proof}
 \begin{enumerate}
 \item
 Primero se prueba la cota de la pureza esperada de $\omega$. Para esta prueba se usarán varios resultados ya empleados en el capítulo anterior como: la operación "flip"  $F$ y la identidad $\langle \ket{\psi} \bra{\psi} \otimes \ket{\psi} \bra{\psi} \rangle_{\psi} =  \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)}$. Además se usará la notación de $ \ket{E_{k}} \equiv \ket{k}$ y $\ket{E_{k}} \otimes \ket{E_{l}} \equiv \ket{kl}$. Se introduce el mapeo de desfase como $ \$[ \rho ] \equiv  \sum_{k} \ket{k} \bra{k} \rho \ket{k}\bra{k}$, implica que $\omega= \langle \ket{\psi}\bra{\psi} \rangle_{t}= \$ [\ket{\psi}\bra{\psi}]$. Entonces usando la operación "flip"  se escribe $\langle \Tr (\omega)^{2} \rangle_{\psi}$ como
@@ -237,14 +236,15 @@ Tomando la desigualdad que está dentro de los corchetes  multiplicándola por m
 y haciendo que $\epsilon=\ln 2$ se llega al resultado esperado.
 \\
 \end{enumerate}
+\end{proof}
 
 La primera parte del teorema \ref{teorema2} nos habla de cómo el promedio de la dimensión efectiva es más grande que la dimensión del subespacio de Hilbert esto significa que si se tiene estados de un subespacio bastante grande se puede asegurar un $d^{eff}(\omega)$ grade esto implica un $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ pequeño. La segunda parte solo confirma de manera más estricta el hecho de encontrar un $d^{eff}(\omega)$ pequeño, mostrando que la probabilidad de encontrar una dimensión efectiva menor a $\frac{d_{R}}{4}$ es exponencialmente pequeña.\\
 \\
 Usando en teorema \ref{teorema2} se puede ver qué ocurre con un estado escogido de forma aleatoria del espacio total $\mathcal{H}$, un estado genérico. El análisis se sigue simplemente poniendo $d_{R}=d$ gracias a esto se comprende que $d^{eff}(\omega) \sim d$ ya que  hay una probabilidad exponencialmente baja para que se dé  el caso en que $d^{eff} < \frac{d}{4}$, como $d=d_{S}d_{B}$ la cota para las fluctuaciones queda $\sqrt{\frac{d_{S}}{d_{B}}}$. Un sistema de muchas partículas la dimensión del espacio de Hilbert crece de manera exponencial \cite{TodaStat}, si el subsistema es una fracción constante del número de partículas del baño esta proporción caerá de manera exponencial con el número total de de partículas luego los subsistemas se equilibrarán.
 \\
-Se podría suponer que  con los teoremas presentados hasta el momento el problema de termalización se ha resulto mayoritariamente pero qué ocurre con los sistemas que están lejos del equilibrio. Con lo dicho arriba sobre los estados genéricos se pensaría que cualquier sistema debe llegar al equilibrio pero esto no es cierto debido a que los estados lejos del equilibrio no son genéricos; los estados lejos del equilibrio no son típicos, por el capítulo anterior se sabe que con cotas exponenciales la mayoría de los estados en el espacio de Hilbert son tales que un subsistema pequeño está en un estado canónico.
+Se podría suponer que  con los teoremas presentados hasta el momento el problema de termalización se ha resuelto mayoritariamente pero qué ocurre con los sistemas que están lejos del equilibrio. Con lo dicho arriba sobre los estados genéricos se pensaría que cualquier sistema debe llegar al equilibrio pero esto no es cierto debido a que los estados lejos del equilibrio no son genéricos; los estados lejos del equilibrio no son típicos, por el capítulo anterior se sabe que con cotas exponenciales la mayoría de los estados en el espacio de Hilbert son tales que un subsistema pequeño está en un estado canónico.
 \\
-Para poder sacar algo de esta pregunta se planteará la situación común, hay un baño que consiste de un número muy grande de partículas de las cuales se conoce unos parámetros macroscópicos, dentro de este se pone un subsistema con un estado inicial arbitrario pero descorrelacionado con el ambiente. Ahora la pregunta es ¿ el subsistema se equilibra?, se verá que para cualquier estado inicial del subsistema y para casi todos los estados iniciales del baño el subsistema se equilibra. Esto incluye cuando el subsistema está lejos del equilibrio.
+Para poder sacar algo de esta pregunta se planteará la situación común. Hay un baño que consiste de un número muy grande de partículas de las cuales se conoce unos parámetros macroscópicos, dentro de este se pone un subsistema con un estado inicial arbitrario pero descorrelacionado con el ambiente. Ahora la pregunta es ¿ el subsistema se equilibra? Se verá que para cualquier estado inicial del subsistema y para casi todos los estados iniciales del baño el subsistema se equilibra. Esto incluye cuando el subsistema está lejos del equilibrio.
 \\
 El estado inicial del sistema está dado por $\ket{\Psi}_{SB}=\ket{\psi}_{S} \ket{\psi}_{B}$. El estado del subsistema es uno arbitrario $\ket{\psi}_{S}$ en el espacio de Hilbert. Dado unos parámetros macroscópicos el baño  debe cumplir con estos, luego el estado del baño $\ket{\phi}_{B} \in \mathcal{H}_{B}^{R} \subseteq \mathcal{H}_{B}$. Esta restricción mantiene la generalidad de seguir en cualquier espacio de Hilbert restringido. Pero la restricción es solo inicial al evolucionar el baño en el tiempo este puede moverse fuera de $\mathcal{H}_{B}^{R}$.
 \\
@@ -290,7 +290,7 @@ donde $\Pi_{k}$ es el proyector sobre $\mathcal{H}_{R}$.
 con $C'=\frac{2}{9 \pi^{3}}$. Si se pone $\epsilon=d_{R}^{-1/3}$ da una distancia promedio pequeña con alta probabilidad cuando $d_{R}>>d_{S}$.
 \end{enumerate}
 \end{theorem}
-\textbf{Demostración}
+\begin{proof}
 \begin{enumerate}
 \item Se usa la relación ya establecida entre la distancia de traza y la distancia de Hilbert-Schmidt
 \begin{align*}\label{a12}
@@ -301,12 +301,12 @@ Ahora se miran las cotas del término que es promediado
 \begin{align*}
 \Big \langle \Tr (\omega_{S}, \langle \omega_{S} \Big \rangle_{\psi})^{2} \rangle_{\psi}  &= \big \langle \Tr(\omega_{S}^{2})_{\psi} \big \rangle - \Tr_{S} (\langle \omega_{S}^{2} \rangle_{\psi})\\
 &=\Tr (   (\langle \omega_{S} \otimes \omega_{S} \rangle_{\psi} - \langle \omega_{S} \rangle_{\psi} \otimes \langle \omega_{S} \rangle_{\psi} )F )\\
-&= \Tr_{SS} \Big( \Tr_{BB} \big( \$ \otimes \$ \big[ \langle \ket{\psi}\bra{\psi} \otimes  \ket{\psi}\bra{\psi}\rangle_{\psi} - \frac{\Pi_{R}}{d_{R}} \otimes  \frac{\Pi_{R}}{d_{R}}  \big]  \big) F \Big)\\
+= &\Tr_{SS} \Big( \Tr_{BB} \big( \$ \otimes \$ \big[ \langle \ket{\psi}\bra{\psi} \otimes  \ket{\psi}\bra{\psi}\rangle_{\psi} - \frac{\Pi_{R}}{d_{R}} \otimes  \frac{\Pi_{R}}{d_{R}}  \big]  \big) F \Big)\\
 &= \Tr_{SS} \bigg( \Tr_{BB} \bigg( \$ \otimes \$ \bigg[ \frac{\Pi_{RR}(\mathbbm{1}+F)}{d_{R}(d_{R}+1)} - \frac{\Pi_{RR}}{d_{R}^{2}}  \bigg]  \bigg) F \bigg)
 &\leq \Tr_{SS} \bigg(  \Tr_{BB} \bigg( \$ \otimes \$ \bigg[ \frac{\Pi_{RR}F}{d_{R}^{2}} \bigg] \bigg) F \bigg)\\
 &= \sum_{kl}  \Tr_{SS} \Big(  \Tr_{BB} \Big( \ket{kl}\bra{kl} \frac{\Pi_{RR}}{d_{R}^{2}}  \ket{lk}\bra{kl} \Big) F \Big)\\
 &= \sum_{kl} \frac{\bra{kl}\Pi_{RR}\ket{lk}}{d_{R}^{2}} \Tr_{S}(\Tr_{B}(\ket{k}\bra{k}) \Tr_{B}(\ket{l}\bra{l}) )\\
-&\leq \sum_{kl} \frac{\bra{k}\Pi_{R}\ket{l}\bra{l}\Pi_{R}\ket{k}}{d_{R}^{2}} \Tr_{S} \Big( \frac{(\Tr_{B}(\ket{k}\bra{k}))^{2}+(\Tr_{B}(\ket{l}\bra{l}))^{2}}{2} \Big)\\
+\leq \sum_{kl} &\frac{\bra{k}\Pi_{R}\ket{l}\bra{l}\Pi_{R}\ket{k}}{d_{R}^{2}} \Tr_{S} \Big( \frac{(\Tr_{B}(\ket{k}\bra{k}))^{2}+(\Tr_{B}(\ket{l}\bra{l}))^{2}}{2} \Big)\\
 &=\frac{1}{d_{R}} \sum_{k} \bra{k} \frac{\Pi_{R}}{d_{R}} \ket{k} \Tr_{S} \Big( (\Tr_{B} \ket{k}\bra{k})^{2} \Big)\\
 &\leq \frac{1}{d_{R}} \sum_{k} \bra{k} \frac{\Pi_{R}}{d_{R}} \ket{k} = \frac{1}{d_{R}}
 \end{align*}
@@ -324,12 +324,12 @@ en la segunda desigualdad se usó el hecho que $\Tr_{S} (\Tr_{B} \ket{k}\bra{k}-
 entonces la constante de Lipschitz satisface $\eta \leq 1$. Sustituyendo en el lema de Levy junto con el valor promedio encontrado en la primera parte de esta demostración se llega al resultado deseado.
 \\
 \end{enumerate}
-
+\end{proof}
 Para un estado inicial que sea el producto del estado del sistema y el del ambiente $\ket{\psi}_{SB}= \ket{\psi}_{S} \ket{\phi}_{B}$ en el espacio $\mathcal{H}_{R}=\ket{\psi} \otimes \mathcal{H}_{R}^{B}$ se mostró que para estados genéricos el ambiente causa que el subsistema se equilibre aunque el estado de equilibrio $\omega_{S}^{\psi}$ del subsistema podría  depender del estado inicial del baño $\ket{\phi}_{B}$. Esto no es así y casi todos los estados del baño en $\mathcal{H}_{B}^{R}$ llevan al mismo estado de equilibrio del subsistema simplemente usando el resultado anterior a  $\mathcal{H}_{B} = \ket{\psi}\otimes \mathcal{H}_{R}^{B}$ y luego $d_{R} = d_{R}^{B}$, si $d_{R}^{B} \gg d_{S}$ para casi todos los estados iniciales del baño llevarán al subsistema al mismo estado de equilibrio $\omega_{S}$. como se usó la cota menos estricta este resultado no depende de la forma explícita de los estados de energías propios.
 \\
 
 
-El nuevo enfoque dado en el capítulo anterior fue explorado aún más siguiendo a \cite{LindenPaper} en este capítulo viendo qué ocurre con los sistemas al evolucionar. El enfoque dado por \cite{Popescu2006} es fructífero  en resultados y se puede seguir profundizando esto genera un interés para que se siga explorando esta perspectiva. Este capítulo mostró cómo en general los estados de un espacio de Hilbert bastante grande que tiene muchos estados propios de energía llegan a estar bastante cerca del estado promedio (promediado temporalmente) y se dice que se equilibra este. Luego se muestra que en general el estado de equilibrio es ese estado promedio. Linden et al. mostraron que hay equilibrio para estados genéricos y también para estados fuera del equilibrio además mostraron la independencia del estado del baño. Aunque ellos no mostraron la independencia del estado del subsistema no debería influenciar el equilibrio. Siguiendo lo dicho por ellos este problema muestra más dificultades que los otros dado a que es necesario una especificación de la energía porque ahora jugaría un papel más importante, en los teoremas anteriores no fue necesario hablar de la energía excepto en el teorema \ref{mismo estado} donde hay una desigualdad dada por los estados propios de energía.
+El nuevo enfoque dado en el capítulo anterior fue explorado aún más siguiendo a \cite{LindenPaper} en este capítulo viendo qué ocurre con los sistemas al evolucionar. El enfoque dado por \cite{Popescu2006} es fructífero  en resultados y se puede seguir profundizando esto genera un interés para que se siga explorando esta perspectiva. Este capítulo mostró cómo en general los estados de un espacio de Hilbert bastante grande que tiene muchos estados propios de energía llegan a estar bastante cerca del estado promedio (promediado temporalmente), y se dice que se equilibra este. Luego se muestra que en general el estado de equilibrio es ese estado promedio. Linden et al. mostraron que hay equilibrio para estados genéricos y también para estados fuera del equilibrio además mostraron la independencia del estado del baño. Aunque ellos no mostraron la independencia del estado del subsistema no debería influenciar el equilibrio. Siguiendo lo dicho por ellos este problema muestra más dificultades que los otros dado a que es necesario una especificación de la energía porque ahora jugaría un papel más importante, en los teoremas anteriores no fue necesario hablar de la energía excepto en el teorema \ref{mismo estado} donde hay una desigualdad dada por los estados propios de energía. 
 %-----------------------------
 %\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
 %Los problemas son que el estado de equilibrio no siempre es independiente del estado inicial del subsiste,a. si el subsistema puede cambiar al ambiente de forma drástica el estado de equilibrio sí dependerá del estado inicial del subsistema. aquí muestra que las dimensiones del espacio de Hilbert del subsistemas el ambiente son importante pero el valor se le haya dado una restricción al Hamiltoniano (Brechas de energías no degeneradas ) esta condición no están estricta como para no permitir cantidades conservadas en el subsistema cuando estas cantidades conservadas existen los estados del subsistema con diferentes constantes(estados inicial es diferentes )no podrán llegar al mismo estado de equilibrio.
