--- a/main.tex
+++ b/main.tex
@@ -159,7 +159,7 @@ René Descartes
 \end{center}
 
 \vspace*{4em}
-In this document will show which are the foundations of the statistical mechanics nowadays. It will survey the conceptual difficulties that are present in Gibbs and the Boltzmann's formulation, some are the necessity of the ergodic hypothesis and the concept of entropy for each formulation. The objective is to present the new approach to the foundations of the statistical mechanics given by Popescu, Short, and Winter \cite{Popescu2006}, they reconcile both perspectives, Gibss' and Boltzmann's; also give some specifications over the nature of probability in the theory, and making obsolete the ergodic hypothesis. The formalism will be reproduced. Finally, it will be show the approach to thermal equilibrium for non equilibrium  systems by Linden, Popescu, Short and Winter \cite{LindenPaper}.
+In this document will show which are the foundations of the statistical mechanics nowadays. It will survey the conceptual difficulties that are present in Gibbs and the Boltzmann's formulation, some are the necessity of the ergodic hypothesis and the concept of entropy for each formulation. The objective is to present the new approach to the foundations of the statistical mechanics given by Popescu, Short, and Winter \cite{Popescu2006}, they reconcile Boltzmann's and Gibbs perspectives; they also give some specifications over the nature of probability in the theory making obsolete the ergodic hypothesis. This formalism will be reproduced. Finally, it will be show the approach to thermal equilibrium for non equilibrium  systems by Linden, Popescu, Short and Winter \cite{LindenPaper}.
 
 
 %En este escrito estudia cuáles son los fundamentos en donde actualmente se encuentra la mecánica estadística. Se ven las dificultades conceptuales que tienen las perspectivas de Gibbs y Boltzmann, como la necesidad de la hipótesis de la ergodicidad y la entropía de cada formalismo. La meta es ver cómo el enfoque dado a los fundamentos de la mecánica estadística entregado por Popescu, Short y Winter \cite{Popescu2006}, este enfoque concilia las perspectivas de Gibbs y Boltzmann, además de resolver detalles como la naturaleza de la probabilidad en la teoría, y también hacer innecesaria la introducción de la ergodicidad. Se replicará el formalismo dado por los autores. Y se finalizará, viendo como Linden, Popescu, Short y Winter \cite{LindenPaper} usaron el formalismo anterior para demostrar la termalización de sistemas lejos del equilibrio.
@@ -181,7 +181,7 @@ In this document will show which are the foundations of the statistical mechanic
 
 \vspace*{4em}
 
-En este escrito estudia cuáles son los fundamentos en donde actualmente se encuentra la mecánica estadística. Se ven las dificultades conceptuales que tienen las perspectivas de Gibbs y Boltzmann, como la necesidad de la hipótesis de la ergodicidad y la entropía de cada formalismo. La meta es ver cómo el enfoque dado a los fundamentos de la mecánica estadística entregado por Popescu, Short y Winter \cite{Popescu2006} concilia estas perspectivas, además de resolver detalles como la naturaleza de la probabilidad en la teoría, y también hacer innecesaria la introducción de la ergodicidad. Se replicará el formalismo dado por los autores. Y se finalizará, viendo como Linden, Popescu, Short y Winter \cite{LindenPaper} usaron el formalismo anterior para demostrar la termalización de sistemas lejos del equilibrio.
+En este escrito se estudia cuáles son los fundamentos donde actualmente se encuentra la mecánica estadística. Se ven las dificultades conceptuales que tienen las perspectivas de Gibbs y Boltzmann, como la necesidad de la hipótesis de la ergodicidad y la entropía de cada formalismo. La meta es ver cómo el enfoque dado a los fundamentos de la mecánica estadística entregado por Popescu, Short y Winter \cite{Popescu2006} concilia estas perspectivas, además de resolver detalles como la naturaleza de la probabilidad en la teoría, haciendo innecesaria la introducción de la hipótesis de ergodicidad. Se replicará el formalismo dado por los autores. Y se finalizará, viendo como Linden, Popescu, Short y Winter \cite{LindenPaper} usaron el formalismo anterior para demostrar la termalización de sistemas lejos del equilibrio.
 
 
 
@@ -191,7 +191,7 @@ En este escrito estudia cuáles son los fundamentos en donde actualmente se encu
 
 
 \chapter*{Agradecimientos}
-Agradezco a mi padre que me ha apoyado en todos mis proyecto confiando en mí y dándome la fortaleza necesaria para las situaciones complicadas. También, siento mucha gratitud hacía mi madre que con su energía y alegría ha hecho de la vida un paseo muy colorido. De la misma manera, hay muchas personas que saben lo importante que son para mí y han hecho de este viaje algo muy ameno. Estoy agradecido con mi asesor de monografía Alonso Botero por su orientación y tutorías.
+Agradezco a mi padre que me ha apoyado en todos mis proyectos confiando en mí y dándome la fortaleza necesaria para las situaciones complicadas. También, siento mucha gratitud hacía mi madre que con su energía y alegría ha hecho de la vida un paseo muy colorido. De la misma manera, hay muchas personas que saben lo importante que son para mí y han hecho de este viaje algo muy ameno. Estoy agradecido con mi asesor de monografía Alonso Botero por su orientación y tutorías.
 %\markboth{INTRODUCCIÓN}{AGRADECIMIENTOS} % encabezado 
 
 
@@ -270,7 +270,7 @@ Agradezco a mi padre que me ha apoyado en todos mis proyecto confiando en mí y 
 \bibitem{Popescu2006} Popescu, S., Short, A., \& Winter, A. (2006). Entanglement and the foundations of statistical mechanics. Nature Physics, 2(11), 754-758. http://dx.doi.org/ 10.1038/nphys444.
 \bibitem{Goldstein} Goldstein, S., Lebowitz, J., Tumulka, R., \& Zanghì, N. (2006). Canonical Typicality. Physical Review Letters, 96(5). http://dx.doi.org/10.1103/physrevlett.96.050403
 \bibitem{LandauStat} Landau, L., Lifshits, E., Pitaevskii, L., Sykes, J., \& Kearsley, M. (1980). Statistical physics. Amsterdam: Elsevier Butterworth Heinemann.
-\bibitem{KardarStat}Kardar, M. (2007). cStatistical physics of particles. Cambridge: Cambridge University Press.
+\bibitem{KardarStat}Kardar, M. (2007). Statistical physics of particles. Cambridge: Cambridge University Press.
 \bibitem{Pathria	Stat}Pathria, R., \& Beale, P. (2012). Statistical mechanics. Beijing: World Publishing Corporation.
 \bibitem{HuangStat}Huang, K. (2005). Statistical mechanics. New York [u.a.]: Wiley.
 \bibitem{Decoherence}Schlosshauer, M. (2010). Decoherence and the quantum-to-classical transition. Berlin: Springer.
